# ayum.cpp

./: CMakeLists.txt  README.md  ayum-config.cmake.in
libs/com/github/ayum/: CMakeLists.txt
libs/com/github/ayum/dld/: CMakeLists.txt  dld.hpp  dld.test.cpp
tools/cmake/: AyumCoverageHelper.cmake  GitHelper.cmake
tools/vcpkg/ports/ayum/: CONTROL  portfile.cmake
